<resources>
    <string name="app_name">JUST DO IT</string>
    <string name="sing_in_label">JUST DO IT login</string>

    <string name="googleConnectionFailed">Google connection failed.</string>
    <string name="loading">Loading&#8230; Please wait.</string>

    <string name="menu_title_projects">Projects</string>

    <string name="menu_item_inbox">Inbox</string>
    <string name="menu_item_today">Today</string>
    <string name="menu_item_plans">Plans</string>
    <string name="menu_item_someday">Someday</string>
    <string name="menu_item_journal">Journal</string>
    <string name="menu_group_title">My projects</string>
    <string name="menu_group_settings">Settings</string>
    <string name="menu_item_search">Search</string>

    <string name="nav_add_list_btn">New list</string>


    <string name="menu_item_add_new_list">New list</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
