<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
           android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inbox"
            android:checked="true"
            android:icon="@drawable/ic_fire"
            android:title="@string/menu_item_inbox" />

        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_coffee"
            android:title="@string/menu_item_today" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_item_plans" />
        <item
            android:id="@+id/nav_someday"
            android:icon="@drawable/ic_leaves"
            android:title="@string/menu_item_someday" />

        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_check"
            android:title="@string/menu_item_journal" />
    </group>

    <group android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_item_search" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_cogwheel"
            android:title="@string/menu_group_settings" />

    </group>

    <group
        android:id="@+id/nav_group_projects"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share33"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="Share" />
        <item
            android:id="@+id/nav_send1111"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="Send" />

    </group>


</menu>